css/styles.css
@import url(http://fonts.googleapis.com/css?family=Permanent+Marker);

* { box-sizing: border-box; }

html, body {
    background-color: white;
    height: 100%;
    font-family: sans-serif;
}

body {
    color: #333;
    text-shadow: rgba(0, 0, 0, .1) 0px 1px 1px;
}

#topbar {
    position: relative;
    width: 100%;
    padding: 0 6px;
    height: 36px;
    line-height: 36px;
    box-shadow: 0 0 4px rgba(0, 0, 0, .6);
    background-color: white;
    background-image: linear-gradient(to bottom, #FFF 0%, #EEE 100%); /* W3C */
    background-image: -moz-linear-gradient(top, #FFF 0%, #EEE 100%); /* FF3.6+ */
    background-image: -o-linear-gradient(top, #FFF 0%, #EEE 100%); /* Opera 11.10+ */
    background-image: -ms-linear-gradient(top, #FFF 0%, #EEE 100%); /* IE10+ */
    z-index: 10;
}

#topbar .right {
    float: right;
    height: 100%;
}

#topbar .left {
    float: left;
    font-family: 'Permanent Marker', cursive;
    font-size: 20px;
}

#topbar button {
    height: 100%;
    width: 36px;
    border: none;
    background: none;
}

.popup {
    position: absolute;
    top: -80%;
    right: 120px;
    border-radius: 0 0 6px 6px;
    min-width: 400px;
    max-width: 50%;
    min-height: 120px;
    max-height: 80%;
    padding: 12px;
    opacity: 0;
    transition: all .2s ease;
    overflow-y: auto;
    background-color: white;
    background-image: linear-gradient(to bottom, #FFF 0%, #EEE 100%); /* W3C */
    background-image: -moz-linear-gradient(top, #FFF 0%, #EEE 100%); /* FF3.6+ */
    background-image: -o-linear-gradient(top, #FFF 0%, #EEE 100%); /* Opera 11.10+ */
    background-image: -ms-linear-gradient(top, #FFF 0%, #EEE 100%); /* IE10+ */
    z-index: 8;
}

.popup.open {
    top: 36px;
    opacity: .95;
    box-shadow: 0 3px 18px rgba(0, 0, 0, .5);
}

.popup h2 {
    margin: 0 0 12px;
}

.popup .popup-close {
    position: absolute;
    top: 6px;
    right: 6px;
    display: inline-block;
    border: none;
    background: none;
    color: #BBB;
}

.popup .popup-close:after {
    content: '× ESC';
}

.popup .popup-close:hover,
.popup .popup-close:focus {
    color: #F77;
}

#dirty-indicator:before {
    content: 'SAVED ';
    color: green;
    opacity: .6;
}

#dirty-indicator.dirty:before {
    content: 'UNSAVED ';
    color: red;
}

#app-container {
    width: 100%;
    height: calc(100% - 37px);
    overflow-y: auto;
}

.err {
    background-color: #FCC;
}

#input-editor, #output-display {
    height: 100%;
    font: 20px monospace;
}

#input-editor {
    width: 70%;
    float: left;
}

#output-display {
    width: 30%;
    float: left;
    position: relative;
}

#output-display .gutter {
    width: 43px;
    background-color: rgba(0, 0, 0, .1);
    text-align: right;
    float: left;
    height: 100%;
    opacity: .6;
}

#output-display .gutter > div {
    padding-right: 6px;
}

#output-display .gutter .current {
    background-color: rgba(0, 0, 0, .2);
}

#output-display .output {
    width: calc(100% - 43px);
    float: left;
    height: 100%;
}

#output-display .line:empty:before {
    content: ' ';
    visibility: hidden;
}

#output-display .line.current {
    background-color: rgba(0, 0, 0, .1);
}

#output-display .collapsed {
    display: none;
}

